--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 license = ""
 requires-python = ">=3.6"
 authors = [
-    { name = "Kamil Slowikowski", email = "kslowikowski@gmail.com" },
-    { name = "John Arevalo" }
+    { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
+    { name = "John Arevalo", orcid = "0000-0002-1138-5036" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
