--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = ""
 requires-python = ">=3.6"
 authors = [
     { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
-    { name = "John Arevalo", orcid = "0000-0002-1138-5036" }
+    { name = "John Arevalo", orcid = "0000-0002-1138-5036", email = "johnarevalo@gmail.com" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
