Add JAX-accelerated backend for 1.5-1.6x speedup
New features:
- Add harmony_jax.py with JAX-accelerated Harmony implementation
- Use jax.vmap to parallelize K-cluster ridge regression loop
- JIT compile hot paths with @jax.jit for faster execution
- GPU-ready: automatically uses GPU when available

Performance (CPU):
- Small dataset (3,500 cells): 1.74s → 1.19s (1.5x faster)
- Large dataset (68,785 cells): 72.90s → 45.20s (1.6x faster)

Correctness:
- JAX vs NumPy correlation: >0.999
- JAX vs R reference: >0.998

Usage:
  import harmonypy as hm
  ho = hm.run_harmony_jax(data_mat, meta_data, ['batch'])

Installation:
  pip install harmonypy[jax]

Other changes:
- Update requires-python to >=3.10 (JAX requirement)
- Add jax/jaxlib as optional dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "A data integration algorithm."
 readme = "README.md"
 license = "mit"
-requires-python = ">=3.6"
+requires-python = ">=3.10"
 authors = [
     { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
     { name = "John Arevalo", orcid = "0000-0002-1138-5036", email = "johnarevalo@gmail.com" }
@@ -28,6 +28,9 @@ dependencies = [
     "scikit-learn",
     "scipy",
 ]
+
+[project.optional-dependencies]
+jax = ["jax", "jaxlib"]
 
 [project.urls]
 Homepage = "https://github.com/slowkow/harmonypy"
