Implement PyTorch backend for Harmony algorithm
- Full PyTorch implementation with CPU/CUDA/MPS support
- Auto-detects best available device (GPU if available)
- Uses float32 for better GPU performance
- Added numerical stability (clamping for log/division operations)
- All tests pass with R package formula compatibility

Performance on Apple Silicon (MPS):
- Small (3.5k cells):   3.66s (NumPy: 1.88s)
- Medium (69k cells):   9.33s (NumPy: 56.22s, ~6x faster)
- Large (858k cells):   23.44s (NumPy: 340s, ~14x faster)

GPU acceleration shows significant speedup for larger datasets,
while small datasets have some overhead from CPU<->GPU transfers.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "A data integration algorithm."
 readme = "README.md"
 license = "mit"
-requires-python = ">=3.6"
+requires-python = ">=3.9"
 authors = [
     { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
     { name = "John Arevalo", orcid = "0000-0002-1138-5036", email = "johnarevalo@gmail.com" }
@@ -27,6 +27,7 @@ dependencies = [
     "pandas",
     "scikit-learn",
     "scipy",
+    "torch",
 ]
 
 [project.urls]
